imrpoving tests